--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: [Hey! This is Shu Wei]
-description: [A web based resume]
+title: Hey! This is Shu Wei
+description: A web based resume
 theme: jekyll-theme-minimal
