--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: Hey! This is Shu Wei
+title: Hey!This is Shu Wei
+logo: /assets/img/logo.png
 description: A web based resume
 theme: jekyll-theme-minimal
