--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hey!This is Shu Wei
-description: Key skills <br> Javascript, AngularJS, Python, CSS, SCSS, RESTful API
+description: Key skills <br> #Javascript, #AngularJS, #Python, #CSS, #SCSS, #RESTful API
 logo: /assets/img/logo.png
 show_downloads: true
 theme: jekyll-theme-minimal
