--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hey!This is Shu Wei
-description: Key skills <br>#Javascript, <p></p>#AngularJS,&nbsp;#Python,&nbsp;#CSS,#SCSS,&nbsp;#RESTful API
+description: Key skills <br>#Javascript,&nbsp;#AngularJS,&nbsp;#Python,&nbsp;#CSS,#SCSS,&nbsp;#RESTful API
 logo: /assets/img/logo.png
 show_downloads: false
 theme: jekyll-theme-minimal
