--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hey!This is Shu Wei
+title: Hey!<br>This is Shu Wei
 description: Key skills <br>#Javascript,&nbsp;#AngularJS,&nbsp;#Python,&nbsp;#CSS,#SCSS,&nbsp;#RESTful API
 logo: /assets/img/logo.png
 show_downloads: false
