--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Hey!<br>This is Shu Wei
-description: Key skills <br>#Javascript,&nbsp;#AngularJS,&nbsp;#Python,&nbsp;#CSS,#SCSS,&nbsp;#RESTful API
+additional_info: Key skills
+description: <p>#Javascript,&nbsp;#AngularJS,&nbsp;#Python,&nbsp;#CSS,#SCSS,&nbsp;#RESTful API</p>
 logo: /assets/img/logo.png
 show_downloads: false
 theme: jekyll-theme-minimal
