--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ title: Hey!<br>This is Shu Wei
 additional_info: Key skills
 description: <p>#Javascript,&nbsp;#AngularJS,&nbsp;#Python,&nbsp;#CSS,#SCSS,&nbsp;#RESTful API</p>
 logo: /assets/img/logo.png
+instagram: /assets/img/icons8-instagram.svg
+linkedin: /assets/img/icons8-linkedin.svg
 show_downloads: false
 theme: jekyll-theme-minimal
 markdown: GFM
