--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ description: <p>#Javascript,&nbsp;#AngularJS,&nbsp;#Python,&nbsp;#CSS,#SCSS,&nbs
 logo: /assets/img/logo.png
 instagram: /assets/img/icons8-instagram.svg
 linkedin: /assets/img/icons8-linkedin.svg
+ig_url: https://www.instagram.com/theonlyshuwei/
+linkedin_url: https://www.linkedin.com/in/shuwei-kuo/
 show_downloads: false
 theme: jekyll-theme-minimal
 markdown: GFM
