--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Hey!<br>This is Shu Wei
-additional_info: Key skills
-description: <p>#Javascript,&nbsp;#AngularJS,&nbsp;#Python,&nbsp;#CSS,#SCSS,&nbsp;#RESTful API</p>
+additional_info: Key skills<br>#Javascript,&nbsp;#AngularJS,&nbsp;#Python,&nbsp;#CSS,&nbsp;#SCSS,&nbsp;#RESTful API
+description: 
 logo: /assets/img/logo.png
 instagram: /assets/img/icons8-instagram.svg
 linkedin: /assets/img/icons8-linkedin.svg
