--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hey!<br>This is Shu Wei
+title: This is Shu Wei
 additional_info: Key skills<br>#Javascript,&nbsp;#AngularJS,&nbsp;#Python,&nbsp;#CSS,&nbsp;#SCSS,&nbsp;#RESTful API
 description: Open to work.
 logo: /assets/img/logo.png
