--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: This is Shu Wei
-additional_info: Key skills<br>#Javascript,&nbsp;#AngularJS,&nbsp;#Python,&nbsp;#CSS,&nbsp;#SCSS,&nbsp;#RESTful API
+additional_info: Key skills<br>#Javascript,&nbsp;#Angular,&nbsp;#PHP,&nbsp;#Python,&nbsp;#CSS,&nbsp;#SCSS,&nbsp;#RESTful API
 description: Open to work.
 logo: /assets/img/logo.png
 instagram: /assets/img/icons8-instagram.svg
